<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Face Authentication Module</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Identity</string>
    <string name="title_section2">Recording</string>
    <string name="buttonreloadusers">Load users from already existing panshots</string>
    <string name="buttonnewuser">Generate Identity</string>
    <string name="new_user_name_hint">Username</string>
    <string name="not_available">n.a.</string>
    <string name="toast_username_already_taken">Username already taken, please chose another one.</string>
    <string name="toast_username_empty">Please enter a username.</string>
    <string name="sd_card_not_available">SD card not available (not mounted?).</string>
    <string name="app_media_directory_name">PanshotRecognition</string>
    <string name="app_classifier_directory_name">PanshotRecognition/_classifiers</string>
    <string name="media_directory_not_found_exception">Media directory was not found (see log).</string>
    <string name="media_directory_cannot_be_created">Media directory cannot be created (see log).</string>
    <string name="user_directory_cannot_be_created">User directory cannot be created (see log).</string>
    <string name="panshot_directory_cannot_be_created">Panshot directory cannot be created (see log).</string>
    <string name="panshot_images_saved_successfully">%1$d Panshot images saved successfully (total angle: %2$f deg).</string>
    <string name="panshot_images_saved_angle_too_small">Recording angle only %1$s deg! Please try to do a broader panshot.</string>
    <string name="frontalonly_image_saved_successfully">Image saved successfully for user %1$s.</string>
    <string name="image_could_not_be_saved">A panshot image could not be saved (see log).</string>
    <string name="no_user_selected">No user selected - please select user first.</string>
    <string name="error_could_not_save_metadata_to_file">Error saving data to csv file (%1$s), aborting.</string>
    <string name="how_to_record_hint_panshot">Press vol up or vol down to start/stop recording panshots. After starting the panshot, try to not rotate your head, only rotate the phone (look straight) and do a full 180 deg rotation of the phone around your head in about 4 seconds.</string>
    <string name="how_to_record_hint_frontal">Press vol up or vol down to take a picture.</string>
    <string name="current_user">Current user: %1$s</string>
    <string name="session_id">01</string>
    <string name="reddot_description">Recording dot</string>
    <string name="delete_identity_description">Delete identity</string>
    <string name="invalid_username">Usernames must not contain "_" or "/"</string>
    <string name="radiobutton_training">Training</string>
    <string name="radiobutton_recognition">Recognition</string>
    <string name="training_recognition">Classifier mode</string>
    <string name="too_less_training_data">Per perspective, %1$s images are required, but user(s) %2$s only have %3$s image(s) for perspective(s) %4$s.</string>
    <string name="most_likely_user_svm">Most likely user: %1$s (probability %2$1.2f)</string>
    <string name="most_likely_user_knn">Most likely user: %1$s (%2$d votes)</string>
    <string name="use_image_energy_normalization">Use image energy normalization as face illumination normalization</string>
    <string name="image_energy_normalization_kernel_subsamling">Image energy normalization: kernel subsampling factor</string>
    <string name="knn_k">KNN: the K parameter</string>
    <string name="use_pca">Use PCA feature transform</string>
    <string name="radiobutton_knn">KNN</string>
    <string name="radiobutton_svm">SVM</string>
    <string name="classifier_type">Face classifier type</string>
    <string name="face_size">Resize face images to this width/height for face recognition [px]</string>
    <string name="pca_features">Amount of PCA features</string>
    <string name="no_faces_detected">No faces detected.</string>
    <string name="trigger_training">Record new face data</string>
    <string name="manage_face_data">Manage face authentication data</string>
    <string name="trigger_settings">Face authentication settings</string>
    <string name="done">Done</string>
    <string name="title_manage_data">Manage Face Authentication Data</string>
    <string name="title_settings">Face Authentication Settings</string>
    <string name="title_face_detection">Face Detection</string>
    <string name="delete_identity">Delete identity</string>
    <string name="test_face_authentication">Test face authentication</string>
    <string name="retrain_classifiers_background">Retrain classifiers using existing face data (background)</string>
    <string name="retrain_classifiers_foreground">Retrain classifiers using existing face data (foreground)</string>
    <string name="really_delete_user">Really delete user %1$s?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="chose_user_to_train">Chose user to train</string>
    <string name="error">Error</string>
    <string name="create_new_user">Create new user</string>
    <string name="chose_username">Chose username</string>
    <string name="ok">OK</string>
    <string name="error_opencv_not_loaded">OpenCV could not be loaded, certain functionality will be unavailable.</string>
    <string name="ask_train_foreground">Really train in foreground? This may take a while (do not exit or kill the App in the meantime).</string>
    <string name="ask_train_background">Train face authentication in background? (Old classifiers will be overwritten by this)</string>
    <string name="error_classifier_could_not_be_loaded">Classifier could not be loaded (did you forget to train them?): %1$s</string>
    <string name="error_service_training">Training encounterd an error: %1$s</string>
    <string name="textview_training_ongoing">Training ongoing</string>
    <string name="info_called_from_framework">Face authentication was initiated by "Authentication Framework"</string>
    <string name="manage_data_using_fsm">Manage data using file system manager</string>
    <string name="manage_data_with_fsm_notice">You can manage face authentication data via a file system manager. If you delete training data you will have to record new one later, if you delete trained classifiers you will have to retrain them later.</string>
    <string name="install_application_title">Install Application</string>
    <string name="install_application_message">%1$s is not installed, install it?</string>
    <string name="market_not_installed">Google Play is not installed, cannot download and install other apps.</string>
    <string name="filemanager_package_name">org.openintents.filemanager</string>
    <string name="no_faces_detected_please_try_again">No faces detected, please try again</string>
    <string name="use_fronal_only">Use fronal face images only in data recording, classifier training and authentication (deselected means that complete panshot data instead of fronal only is used)</string>
    <string name="changing_setting_requires_retraining">Changing these settings requires face classifiers to be retrained! Do so by starting classifier training after leaving settings.</string>
    <string name="face_data_settings">\nFace data settings</string>    
    <string name="face_recognition_settings">\nFace recognition setting</string>    
    <string name="really_change_settings">Really change settings? This will delete current classifier data.</string>    
    <string name="knn_distance_metric_lnorm_power">KNN: power of the L^n-Norm distance metric</string>    
    <string name="org_opencv_engine">org.opencv.engine</string>    
    
</resources>