<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button_record_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_view"
        android:text="@string/trigger_training" />

    <Button
        android:id="@+id/button_test_authentication"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_view"
        android:text="@string/test_face_authentication" />

    <Button
        android:id="@+id/button_retrain_classifiers_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_upload"
        android:text="@string/retrain_classifiers_background" />

    <Button
        android:id="@+id/button_retrain_classifiers_foreground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_upload"
        android:text="@string/retrain_classifiers_foreground" />

    <Button
        android:id="@+id/button_manage_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_manage"
        android:text="@string/manage_face_data" />

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_preferences"
        android:text="@string/trigger_settings" />

    <ProgressBar
        android:id="@+id/progressbar_training_ongoing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/textview_training_ongoing"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/textview_training_ongoing"
        android:visibility="invisible" />

</LinearLayout>