<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/changing_setting_requires_retraining"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView4"
            android:text="@string/face_data_settings"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:id="@+id/sep1"
            style="@style/Separator"
            android:layout_below="@+id/textView6" />

        <TextView
            android:id="@+id/textViewFaceSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/sep1"
            android:text="@string/face_size"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextFaceSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewFaceSize"
            android:ems="100"
            android:hint="@string/face_size"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/switchUseFrontalOnly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editTextFaceSize"
            android:text="@string/use_fronal_only" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/switchUseFrontalOnly"
            android:text="@string/face_recognition_settings"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:id="@+id/sep2"
            style="@style/Separator"
            android:layout_below="@+id/textView7" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/sep2"
            android:text="@string/classifier_type"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <RadioGroup
            android:id="@+id/radioGroupClassierType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView5" >

            <RadioButton
                android:id="@+id/radioSvm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/radiobutton_svm" />

            <RadioButton
                android:id="@+id/radioKnn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/radiobutton_knn" />
        </RadioGroup>

        <TextView
            android:id="@+id/textViewKnnK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/radioGroupClassierType"
            android:text="@string/knn_k"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextKnnK"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textViewKnnK"
            android:ems="10"
            android:hint="@string/knn_k"
            android:inputType="number" />

        <CheckBox
            android:id="@+id/checkBoxUseImageEnergyNormalization"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editTextKnnK"
            android:layout_below="@+id/editTextKnnK"
            android:text="@string/use_image_energy_normalization" />

        <TextView
            android:id="@+id/textViewUseImageEnergyNormalizationKernelSubsampling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/checkBoxUseImageEnergyNormalization"
            android:text="@string/image_energy_normalization_kernel_subsamling"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextImageEnergyNormalizationKernelSubsampling"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/textViewUseImageEnergyNormalizationKernelSubsampling"
            android:ems="10"
            android:hint="@string/image_energy_normalization_kernel_subsamling"
            android:inputType="numberDecimal" />

        <CheckBox
            android:id="@+id/checkBoxUsePca"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editTextImageEnergyNormalizationKernelSubsampling"
            android:text="@string/use_pca" />

        <TextView
            android:id="@+id/textViewPcaFeatures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/checkBoxUsePca"
            android:text="@string/pca_features"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/editTextPcaFeatures"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textViewPcaFeatures"
            android:ems="20"
            android:hint="@string/pca_features"
            android:inputType="number" />
    </RelativeLayout>

</ScrollView>