<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$DummySectionFragment">

	<RelativeLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">
	
	
	    
	    <TextView
	        android:id="@+id/TextView01"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/create_identity"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	    
	    <EditText
	        android:id="@+id/edit_text_new_user"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/TextView01"
	        android:ems="10"
	        android:hint="@string/new_user_name_hint"
	        android:inputType="textPersonName" >

	        <requestFocus />
	    </EditText>

	    
	    <Button
	        android:id="@+id/button_new_user"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/edit_text_new_user"
	        android:text="@string/buttonnewuser" />

	     <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/button_new_user"
	        android:text="@string/delete_identity_description"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	     
	    <Spinner
	        android:id="@+id/spinner_identity"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/textView1"
	        android:contentDescription="@string/delete_identity_description" />
	 
	    <Button
	        android:id="@+id/button_delete_identity"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_below="@+id/spinner_identity"
	        android:text="@string/delete_identity" />

	</RelativeLayout>
</ScrollView>